Closed Bug 1848130 Opened 9 months ago Closed 9 months ago

Ensure profiler_add_marker arguments are not evaluated when not profiled.

Categories

(Core :: Gecko Profiler, defect)

defect

Tracking

()

RESOLVED FIXED
118 Branch
Tracking Status
firefox118 --- fixed

People

(Reporter: emilio, Assigned: emilio)

References

Details

Attachments

(1 file)

No description provided.
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/011f485e2a42
Ensure profiler_add_marker arguments are not evaluated when not profiled. r=jnicol,canaltinova
Status: NEW → RESOLVED
Closed: 9 months ago
Resolution: --- → FIXED
Target Milestone: --- → 118 Branch
Duplicate of this bug: 1847909
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: