Bug 1848130 - Ensure profiler_add_marker arguments are not evaluated when not profiled. r=jnicol,canaltinova

This is a more generic version of D185008.

Differential Revision: https://phabricator.services.mozilla.com/D185800